# brewmaster

./: README.md
artwork_masters/keggie/v1/: main.psd  thermostat.psd
ddplatform/objects/: CMakeLists.txt  DDObjectBase.h  Makefile  README.md  unittest.c
ddplatform/objects/include/: DDArray.h  DDException.h  DDObjectDefinition.h  DDObjects.h  DDString.h  class.h  object.h
ddplatform/objects/src/: DDArray.c  DDException.c  DDObjectBase.c  DDObjectDefinition.c  class.c  object.c  unittest.c
ember_frontend/js/: application.js  brewmaster.css  index.html  index.js  routes.js  templates.js
ember_frontend/js/controllers/: beverage_controller.js  beverage_type_controller.js  edit_tap_controller.js  new_beverage_controller.js  new_beverage_type_controller.js  new_producer_controller.js  new_style_controller.js  new_tap_controller.js  producer_controller.js  style_controller.js  tap_controller.js
ember_frontend/js/models/: beverage.js  beverage_type.js  producer.js  style.js  tap.js
ember_frontend/js/routes/: beverage_types_route.js  beverages_route.js  new_beverage_route.js  new_beverage_type_route.js  new_producer_route.js  new_style_route.js  new_tap_route.js  producers_route.js  styles_route.js  taps_route.js
ember_frontend/js/templates/: application.handlebars  beverage.handlebars  beverage_type.handlebars  beverage_types.handlebars  beverages.handlebars  edit_tap.handlebars  index.handlebars  producer.handlebars  producers.handlebars  style.handlebars  styles.handlebars  tap.handlebars  taps.handlebars
ember_frontend/js/views/: image_upload_view.js  nav_view.js
examples/: .gitignore  Hello_Triangle.c  Makefile  cairo_framebuffer_draw.c  cairo_glbackend.c  egl.c  esUtil.c  framebuffer_draw.c  framebuffer_info.c  gcd.c  opengl_from_scratch.c  opengl_sdl.c  opengl_simple.c  openvc.c  parse_json.c  test.json  tiger.h  url_request.c
keggie/: CMakeLists.txt  Makefile  fontinfo.h  main.c  opengl_utilities.h  shader_loader.h  shapes.c  texture_loader.c
keggie/beerkit/: CMakeLists.txt  beerkit.h  drawing.h  fontinfo.h  fonts.h
keggie/beerkit/src/: drawing.c
keggie/beerkit/src/fonts/: DejaVuSans.c  HelveticaNeueDeskUI.c
keggie/fonts/: DejaVuSans.c  HelveticaNeueDeskUI.c  fonts.h
keggie/shaders/: fragment.glsl  vertex.glsl
keggie/src/: bundle.c  bundle.h  color.h  debug.c  debug.h  draw_image.h  egl_context.c  egl_context.h  geometry.h  gl_context.c  gl_context.h  image.c  image.h  jpeg_reader.c  jpeg_reader.h  log.c  log.h  main.c  matrix.c  matrix.h  opengl_initialize.c  opengl_initialize.h  opengl_utilities.h  paths.c  paths.h  png_reader.c  png_reader.h  shader_loader.c  shader_loader.h  text_rendering.c  text_rendering.h  texture_loader.c  texture_loader.h  threads.c  threads.h
old_rasputin/: index.html
old_rasputin/css/: old_rasputin.css
old_rasputin/js/: app.js  brewmaster.js  collections.js  main.js
old_rasputin/js/collections/: beverage_styles.js  beverage_types.js  beverages.js  keg_types.js  producers.js  settings.js  tap_entry.js
old_rasputin/js/models/: beverage.js  beverage_style.js  beverage_type.js  keg_type.js  producer.js  settings.js  tap_entry.js
old_rasputin/js/routers/: router.js
old_rasputin/js/views/: app-view.js  beverage-builder-view.js  beverage-builder.js  beverage-item-view.js  beverage-styles-view.js  beverage-types-view.js  beverage-view.js  beverages-view.js  edit-beverage-view.js  edit-tap-entry-view.js  form-view.js  home-screen-view.js  image.js  keg-types-view.js  list-view.js  main-view.js  producers-view.js  tap-entries-view.js  tap-view.js
tools/: Makefile  fontinfo.c
webapi/: server.go
